# chessmate

./: .gitignore
Bridge/: server.js
Chess-Blunder-Detection-main/: README.md  main.py
Chess-Blunder-Detection-main/pgn/: example-1.pgn
Chess-Engine-in-cpp/engine/: LICENSE  README.md
Chess-Engine-in-cpp/engine/benchmark_tests/: benchmark_tests.h  perft_tests.cpp  puzzle_tests.cpp
Chess-Engine-in-cpp/engine/debug_tests/: debug_tests.h  evaluation_tests.cpp  see_suite.txt  see_tests.cpp
Chess-Engine-in-cpp/engine/include/: board.h  config.h  hashtable.h  init.h  macros.h  timer.h  uci.h
Chess-Engine-in-cpp/engine/src/: board.cpp  init.cpp  main.cpp  misc.cpp
Chess-Engine-in-cpp/engine/src/eval/: evalparams.h  evaluation.cpp
Chess-Engine-in-cpp/engine/src/logger/: logger.cpp
Chess-Engine-in-cpp/engine/src/movegen/: movegen.cpp
Chess-Engine-in-cpp/engine/src/search/: movesort.cpp  search_helper.cpp
aramis-chess/: README.md  start.sh
aramis-chess/bridge/: package.json  server.js
aramis-chess/engine/: CMakeLists.txt  makefile
aramis-chess/engine/benchmark_tests/: search_and_eval.cpp
aramis-chess/engine/debug_tests/: bitmask_tests.cpp  game_log.txt  game_scenario.cpp  move_tests.cpp  random_positions.epd
aramis-chess/engine/include/: game_statistics.h  inline_functions.h  misc.h  move.h  types.h
aramis-chess/engine/src/: UCI.cpp  hashtable.cpp
aramis-chess/engine/src/eval/: evaluation.h
aramis-chess/engine/src/logger/: logger.h
aramis-chess/engine/src/movegen/: movegen.h  update.cpp
aramis-chess/engine/src/search/: search.cpp  search.h  see.cpp  see.h  time_manager.cpp
aramis-chess/gui/: package.json
aramis-chess/gui/public/: index.html
aramis-chess/gui/src/: App.css  App.js
aramis-chess/gui/src/components/: Board.jsx  EvalBar.jsx  MoveHistory.jsx  PromotionDialog.jsx  Square.jsx
aramis-chess/gui/src/hooks/: useEngine.js
aramis-chess/gui/src/logic/: chess.js  pgn.js  uci.js
gui/: index.html
src/: main.py
